<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Popular Movies</string>
    <string name="no_movies">No movies found</string>

    //Main activity problem
    <string name="no_connection">No internet connection</string>
    <string name="no_connection_sub_text">Please fix your internet connection</string>
    <string name="server_problem">Server not responding</string>
    <string name="server_problem_sub_text">We will fix it as soon as possible</string>
    <string name="no_favorite">List of favorite movies is empty </string>
    <string name="no_favorite_sub_text">Please add your favorite movies to the list</string>



    //Detail activity
    <string name="overview">Overview</string>
    <string name="release_date">Release date:</string>
    <string name="vote_average">Vote average:</string>
    <string name="reviews">Reviews</string>
    <string name="trailers">Trailers</string>



    //Settings sort by
    <string name="favorite">Favorite</string>
    <string name="most_popular">Most popular</string>
    <string name="highest_rated">Highest rated</string>

    <string name="pref_number_of_columns_key" translatable="false">show_x_columns</string>
    <string name="pref_sort_by_key" translatable="false">sort_by</string>
    <string name="pref_sort_by_most_popular" translatable="false">popular</string>
    <string name="pref_sort_by_highest_rated" translatable="false">top_rated</string>
    <string name="pref_sort_by_favorite" translatable="false">favorite</string>



    //Settings menu
    <string name="action_refresh">Refresh</string>
    <string name="action_sortBy">Sort by</string>

    <string name="view">View</string>
    <string name="one_column">One column</string>
    <string name="two_columns">Two columns</string>
    <string name="three_columns">Three columns</string>
    <string name="four_columns">Four columns</string>



    //Add
    <string name="editor_insert_movie_successful">Movie added to favorite</string>
    <string name="editor_insert_movie_failed">Error with adding movie</string>

    <string name="editor_delete_product_successful">Movie removed from favorite</string>
    <string name="editor_delete_product_failed">Error with removing movie</string>


    //onSaveInstanceState
    <string name="pref_pageNo" translatable="false">pref_pageNo</string>
    <string name="pref_firstView" translatable="false">pref_firstView</string>
    <string name="pref_lastClicked" translatable="false">pref_lastClicked</string>

    //Test
    <string name="middle">This is the middle!</string>
    <string name="retry">Retry</string>

</resources>
